--- a/flowers_sd_finetune.ipynb
+++ b/flowers_sd_finetune.ipynb
@@ -192,6 +192,7 @@
         }
       ],
       "source": [
+        "#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\n",
         "!huggingface-cli login\n"
       ]
     },
@@ -390,3 +391,21 @@
         "  --output_dir=\"sd-flowers-model\" "
       ]
     }
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
